bugs fixed + reports fixed

--- a/public/css/post-login/generals.css
+++ b/public/css/post-login/generals.css
@@ -2,3 +2,7 @@ ul, li{
     background-color:transparent;
     text-decoration: none;
 }
+/* button:hover{
+    max-height: auto;
+    transition: 0.5s max-width;
+} */
