--- a/public/css/pre-login/aboutUs.css
+++ b/public/css/pre-login/aboutUs.css
@@ -2,6 +2,15 @@
   margin:0;
   padding:0;
 }
+.aboutUs_section{
+  margin: 5rem 2rem;
+}
+.timeline_style{
+  margin-left:-2.5rem;
+  display:inline-block;
+  width:100%;
+  overflow-y:auto;
+}
  .timeline-horizontal {
     list-style: none;
     position: relative;
@@ -88,12 +97,96 @@
     margin-left: -1.5px;
   }
 
-  /* Vision */
-  .vision{
-    background-color:lightgrey;
-  }
+
 /* Mission */
 .mission{
-  background-color:grey;
-  color:lightgrey;
+  background-color:rgb(105, 131, 143);
+  color:white;
+  margin-top:1rem;
+  padding: 2rem 4rem;
+  line-height:2rem;
+}
+.happy_students_pic{
+  margin: 3rem;
+  border-radius: 5px;
+}
+.getInTouch{
+  position: absolute;
+  top: 9rem;
+  left: 3rem;
+  
+}
+.git_btn{
+  width: 13rem;
+  height: 5rem;
+  color: white;
+  font-weight: 700;
+  background-color: rgb(165, 0, 77);
+  text-transform: uppercase;
+  border-radius: 10px;
+}
+.git_btn:hover{
+  color: white;
+  letter-spacing: 3px;
+  width: 15rem;
+  transition: 0.5s;
+  background: linear-gradient( rgb(165, 0, 77), rgb(165, 0, 77,0.9),  rgb(165, 0, 77));
+}
+
+/* Faculties */
+.preLogin_faculties{
+  margin-top: 3.2rem;
+}
+.preLogin_faculties .amphi{
+  width: 90%;
+  padding: 5px;
+  border-radius: 3px;
+  margin-bottom: 3rem;
+
+}
+/* facultyProfile */
+.facultyProfile{
+  margin-top: 3.5rem;
+  z-index: 1;
+  /* color: red; */
+}
+.facultyProfile .facultyPresentation{
+  padding: 2rem;
+  line-height: 1.5rem;
+  margin: 1rem;
+  border: darkgrey solid 0.2rem;
+  border-radius: 8rem;
+}
+.discoverDiff{
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+/* facilities */
+.facilties_header h2{
+  margin-top: 6rem;
+  text-transform: uppercase;
+
+}
+.facilties_header p{
+  font-weight: 300;
+  font-size: 20px;
+}
+.facilities_carousel{
+  padding: 0 8rem;
+  margin-bottom: 2rem;
+
+}
+.book_app{
+  margin-left: 5rem;
+  letter-spacing: 2px;
+  padding-left: 1rem;
+}
+.more_sl{
+  padding: 2.75rem 0 2.5rem 1rem ;
+  line-height: 1.75rem;
+}
+.facilities_events{
+  margin: 2rem auto;
 }
