--- a/public/css/pre-login/aboutUs.css
+++ b/public/css/pre-login/aboutUs.css
@@ -150,12 +150,10 @@
   z-index: 1;
   /* color: red; */
 }
-.facultyProfile .facultyPresentation{
-  padding: 2rem;
-  line-height: 1.5rem;
-  margin: 1rem;
-  border: darkgrey solid 0.2rem;
-  border-radius: 8rem;
+.facultyProfile h2{
+  margin-bottom: 2rem;
+  text-transform: uppercase;
+  letter-spacing: 1px;
 }
 .discoverDiff{
   text-transform: uppercase;
