--- a/public/css/generalities/navbar.css
+++ b/public/css/generalities/navbar.css
@@ -12,5 +12,5 @@
     z-index: 100; 
     top:0cm;
     width:100%;
-    background-image: linear-gradient(90deg, #bec4cc9d,#fff, #ffff , #fff, #ffff, #ffff,#bec4cc9d);
+    background-image: linear-gradient(90deg, #bec4cc9d, #ffff,#bec4cc9d);
 }
