calendar ok, password changed ok, design ok

--- a/public/css/pre-login/pre-login.css
+++ b/public/css/pre-login/pre-login.css
@@ -23,7 +23,10 @@
 nav li a:hover {
   font-weight: bold!important;
 }
-nav li a:active{
+/* nav li a:active{
   font-weight: bold!important;
 
+} */
+li{
+  list-style: none;
 }
