--- a/public/css/post-login/generals.css
+++ b/public/css/post-login/generals.css
@@ -9,6 +9,11 @@ ul, li{
     top:2rem;
 }
 
-a:active {
-    color: rgb(233, 77, 77);
-  }
+.active{
+    color: rgb(82, 80, 80) !important;
+    background-color: transparent;
+    font-weight: bolder;
+}
+.nav-link.active{
+    background-color: transparent !important;
+}
